# otioview

./: .gitignore  README.md  pyproject.toml
src/otioview/: console.py
